force-app/main/default/objects/ApiKeys__c/ApiKeys__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ApiKeys</label>
</CustomObject>