force-app/main/default/objects/ApiKeys__c/fields/CompanyInfoAPIKey__c.field-meta.xml
<CustomField>
    <fullName>CompanyInfoAPIKey__c</fullName>
    <label>CompanyInfoAPIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>