force-app/main/default/objects/ApiKeys__c/fields/GeoapifyAPIKey__c.field-meta.xml
<CustomField>
    <fullName>GeoapifyAPIKey__c</fullName>
    <label>GeoapifyAPIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>