force-app/main/default/objects/ApiKeys__c/fields/OpenAiKey__c.field-meta.xml
<CustomField>
    <fullName>OpenAiKey__c</fullName>
    <label>OpenAiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>