force-app/main/default/objects/ApiKeys__c/fields/SolarEnergyAPIKey__c.field-meta.xml
<CustomField>
    <fullName>SolarEnergyAPIKey__c</fullName>
    <label>SolarEnergyAPIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>